# aoc-2024

./: Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
day3/src/: main.rs
day4/src/: main.rs
day5/src/: main.rs
day6/src/: main.rs
day7/src/: main.rs
src/: main.rs
